--- a/VV570/HW6/submission.tex
+++ b/VV570/HW6/submission.tex
@@ -1,17 +1,27 @@
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
 \documentclass[paper=a4, fontsize=11pt]{scrartcl} % A4 paper and 11pt font size
+
 \usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
 \usepackage{fourier} % Use the Adobe Utopia font for the document - comment this line to return to the LaTeX default
 \usepackage[english]{babel} % English language/hyphenation
 \usepackage{amsmath,amsfonts,amsthm,amssymb} % Math packages
 \usepackage{mathrsfs}
+
 \usepackage{algorithm, algorithmic}
 \renewcommand{\algorithmicrequire}{\textbf{Input:}} %Use Input in the format of Algorithm  
 \renewcommand{\algorithmicensure}{\textbf{Output:}} %UseOutput in the format of Algorithm  
+
 \usepackage{listings}
 \lstset{language=Matlab}
+
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
+
 \usepackage{sectsty} % Allows customizing section commands
 \allsectionsfont{\centering \normalfont\scshape} % Make all sections centered, the default font and small caps
+
 \usepackage{fancyhdr} % Custom headers and footers
 \pagestyle{fancyplain} % Makes all pages in the document conform to the custom headers and footers
 \fancyhead{} % No page header - if you want one, create it in the same way as the footers below
@@ -21,50 +31,50 @@
 \renewcommand{\headrulewidth}{0pt} % Remove header underlines
 \renewcommand{\footrulewidth}{0pt} % Remove footer underlines
 \setlength{\headheight}{13.6pt} % Customize the height of the header
+
 \numberwithin{equation}{section} % Number equations within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
 \numberwithin{figure}{section} % Number figures within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
 \numberwithin{table}{section} % Number tables within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
+
 \setlength\parindent{0pt} % Removes all indentation from paragraphs - comment this line for an assignment with lots of text
+
+%----------------------------------------------------------------------------------------
+%	TITLE SECTION
+%----------------------------------------------------------------------------------------
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 
-\title{\normalfont \normalsize 
-	\textsc{Shanghai Jiao Tong University, UM-SJTU JOINT INSTITUTE} \\ [25pt]
-	\horrule{0.5pt} \\[0.4cm] 
-	\huge Advanced Convection \\ HW1 \\
-	\horrule{2pt} \\[0.5cm]}
+\title{	
+\normalfont \normalsize 
+\textsc{Shanghai Jiao Tong University, UM-SJTU JOINT INSTITUTE} \\ [25pt] % Your university, school and/or department name(s)
+\horrule{0.5pt} \\[0.4cm] % Thin top horizontal rule
+\huge Introduction to Numerical Analysis \\ HW6 \\ % The assignment title
+\horrule{2pt} \\[0.5cm] % Thick bottom horizontal rule
+}
 
-\author{Yu Cang \\ 018370210001}
-\date{\normalsize \today}
+\author{Yu Cang \\ 018370210001} % Your name
+
+\date{\normalsize \today} % Today's date or a custom date
 
 \begin{document}
 
-\maketitle
+\maketitle % Print the title
 
-\section{PROBLEM 1}
-When $u_2= 0$ and the flow is entirely in the x-direction, the governing equations can be simplified as follows
-\begin{equation}
-	u_1 \frac{\partial u_1}{\partial x_1} + \frac{1}{\rho}\frac{\partial p}{\partial x_1} = 0
-\end{equation}
-\begin{equation}
-	\frac{\partial p}{\partial x_2} = 0
-\end{equation}
-where the body-force are neglected.\\
-It can be concluded that pressure doesn't change in y-direction when x is fixed.\\
-Also, pressure gradient in x-direction is the driven force of the fluids.
+%----------------------------------------------------------------------------------------
+%	PROBLEM 1
+%----------------------------------------------------------------------------------------
+\section{Richardson Extrapolation}
 
-\section{PROBLEM 2}
-When it comes to constant property
-\begin{equation}
-	\frac{\partial}{\partial y}(k\frac{\partial T}{\partial y}) = k \frac{\partial T^2}{\partial^2 y}
-\end{equation}
-Since $i=C_p T$ when considering ideal gas
-\begin{equation}
-	\rho u \frac{\partial i}{\partial x} + \rho v \frac{\partial i}{\partial y} = \rho C_p (u\frac{\partial T}{\partial x} + v \frac{\partial T}{\partial y})
-\end{equation}
-As $(\frac{\partial u}{\partial y})^2$ is a small term compared to other terms, it can be seen as 0.\\
-(Sorry, haven't figured out how to eliminate $\frac{\partial p}{\partial x}$...)
 
-\section{PROBLEM 3}
+%----------------------------------------------------------------------------------------
+%	PROBLEM 2
+%----------------------------------------------------------------------------------------
+\section{Integration}
+
+	
+%----------------------------------------------------------------------------------------
+%	PROBLEM 3
+%----------------------------------------------------------------------------------------
+\section{Gauss's method}
 
 
 \end{document}
